Thu Nov 22 13:31:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/tao-log.install:
          Fixed executable name

Thu Nov 22 12:56:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/ACE-DPKG.mwc:
        * debian/TAO-DPKG.mwc:
          Removed these files.

Thu Nov 22 12:55:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/default.features:
        * debian/libtao-2.1.6.install:
        * debian/libtao-dev.install:
        * debian/platform_macros.GNU:
          Remove lzo1 compressor

Thu Nov 22 12:38:34 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Added new ACE_DYNAMIC_VERSIONED_SERVICE_DIRECTIVE which accepts
          an explicit version to be loaded. Needed for debian for example

        * debian/patches/series:
        * debian/patches/15-fix-lzo-flags.diff:
        * debian/patches/34-bts386713.diff:
          Cleanup

        * debian/platform_macros.GNU:
          Set versioned_so=2

        * include/makeinclude/platform_g++_common.GNU:
          When versioned_so=2 add ACE_VERSIONED_SO=2 as
          define

Thu Nov 22 09:20:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
        * include/makeinclude/rules.lib.GNU:
        * include/makeinclude/rules.local.GNU:
        * include/makeinclude/wrapper_macros.GNU:
          Added support for versioned_so=2, that will create
          for example libACE-6.1.6.so instead of libACE.so.6.1.6

        * debian/patches/20-versioned_libs.diff:
          Removed this file.

Wed Nov 21 10:18:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/libace-xml-utils-6.1.6.install:
        * debian/libace-xml-utils-dev.install:
          New files

        * debian/platform_macros.GNU.in:
          Removed this file.

Tue Nov 20 23:55:57 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/config-hpux-11.00.h: