@@ -115,9 +115,9 @@ public:
   void set_timer_id (long timer_id);
 
   /// Get the dispatch info. The dispatch information is got
-  /// through <info>. This form helps us in preventing allocation and
+  /// through @a info. This form helps us in preventing allocation and
   /// deleting data along the criticl path.
-  /// @@TODO: We may want to have a copying version too, so that our
+  /// @todo We may want to have a copying version too, so that our
   /// interface will be complete..
   void get_dispatch_info (ACE_Timer_Node_Dispatch_Info_T <TYPE> &info);
 
